<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_failure"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="39dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/maturity"
        android:gravity="center"
        android:textColor="@color/black_31"
        android:textSize="13sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="65dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCountDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_count"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:layout_marginEnd="4dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump"
            android:textColor="@color/black_31"
            android:textSize="12sp"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>