<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/commit_success"
        android:textColor="@color/black_15"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_success"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commit_success_"
                android:textColor="@color/black_2d"
                android:textSize="11sp"
                android:textStyle="bold"
                tools:ignore="SmallSp"/>

            <TextView
                android:id="@+id/tvLinenCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/commit_count"
                android:textColor="@color/black_2d"
                android:textSize="11sp"
                android:textStyle="bold"
                tools:ignore="SmallSp"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBackMain"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/shape_bg_hotel"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            android:gravity="center"
            android:text="@string/back_main"
            android:textColor="@color/black_2d"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tvSeeOrder"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:background="@drawable/shape_blue_gradient_corner"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:selectableItemBackground"
            android:gravity="center"
            android:text="@string/see_order"
            android:textColor="@android:color/white"
            android:textSize="12sp"/>
    </LinearLayout>
</LinearLayout>