<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_title"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp"
                app:contentPaddingBottom="12dp"
                app:contentPaddingLeft="15dp"
                app:contentPaddingRight="15dp"
                app:contentPaddingTop="15dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="3dp"
                        android:layout_height="16dp"
                        android:layout_marginTop="1dp"
                        android:background="@color/colorAccent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/tvOrderInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/order_info"
                        android:textColor="@color/black_15"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <View
                        android:id="@+id/div1"
                        style="@style/div1"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@id/tvOrderInfo"/>

                    <TextView
                        android:id="@+id/tvOrderNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:text="@string/order_num"
                        android:textColor="@color/black_15"
                        android:textSize="13sp"
                        app:layout_constraintTop_toBottomOf="@id/div1"/>

                    <TextView
                        android:id="@+id/tvOrderTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/order_time"
                        android:textColor="@color/black_15"
                        android:textSize="13sp"
                        app:layout_constraintTop_toBottomOf="@id/tvOrderNum"/>

                    <TextView
                        android:id="@+id/tvLinenTrend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/linen_trend_"
                        android:textColor="@color/black_15"
                        android:textSize="13sp"
                        app:layout_constraintTop_toBottomOf="@id/tvOrderTime"/>

                    <TextView
                        android:id="@+id/tvPrincipal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/principal"
                        android:textColor="@color/black_15"
                        android:textSize="13sp"
                        app:layout_constraintTop_toBottomOf="@id/tvLinenTrend"/>

                    <TextView
                        android:id="@+id/tvCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/category_name_"
                        android:textColor="@color/black_15"
                        android:textSize="13sp"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@id/tvPrincipal"/>

                    <TextView
                        android:id="@+id/tvOrderType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/order_type"
                        android:textColor="@color/black_15"
                        android:textSize="13sp"
                        app:layout_constraintTop_toBottomOf="@id/tvCategory"/>
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp"
                app:contentPaddingBottom="12dp"
                app:contentPaddingLeft="15dp"
                app:contentPaddingRight="15dp"
                app:contentPaddingTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/card1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <View
                            android:layout_width="3dp"
                            android:layout_height="16dp"
                            android:layout_marginTop="1dp"
                            android:background="@color/colorAccent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/linen_list"
                            android:textColor="@color/black_15"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </FrameLayout>

                    <View
                        style="@style/div1"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:gravity="center"
                            android:text="@string/linen_name"
                            android:textColor="@color/black_15"
                            android:textSize="12sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/linen_count"
                            android:textColor="@color/black_15"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

                    <View
                        style="@style/div1"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvTotalLinen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="@string/total_linen"
                            android:textColor="@color/black_15"
                            android:textSize="13sp"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total"
                                android:textColor="@color/black_15"
                                android:textSize="13sp"/>

                            <TextView
                                android:id="@+id/tvTotalMoney"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="6dp"
                                android:layout_marginStart="6dp"
                                android:text="@string/test_count"
                                android:textColor="@color/red_ea433c"
                                android:textSize="16sp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/yuan"
                                android:textColor="@color/black_15"
                                android:textSize="13sp"/>
                        </LinearLayout>
                    </FrameLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvConnectPrinter"
            style="@style/btn_style"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/connect"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvPrinter"
            style="@style/btn_style"
            android:layout_weight="1"
            android:text="@string/printer_order"/>
    </LinearLayout>
</LinearLayout>