<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_title"/>


    <TextView
        android:id="@+id/tvPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingBottom="10dp"
        android:paddingEnd="14dp"
        android:paddingStart="14dp"
        android:paddingTop="15dp"
        android:text="@string/principal"
        android:textColor="@color/black_a31b"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingEnd="14dp"
        android:paddingStart="14dp"
        android:text="@string/category_name_"
        android:visibility="gone"
        android:textColor="@color/black_a31b"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvLinenTrend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingBottom="15dp"
        android:paddingEnd="14dp"
        android:paddingStart="14dp"
        android:paddingTop="10dp"
        android:text="@string/linen_trend_"
        android:textColor="@color/black_a31b"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLinenCount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/dirty_count"
            android:textColor="@color/gray_cf1c"
            android:textSize="13sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvConfirmOrder"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/confirm_order"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>