<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/lnAccount"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/ivLogo">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_account"/>

        <EditText
            android:id="@+id/etAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:hint="@string/hint_account"
            android:inputType="number"
            android:paddingEnd="10dp"
            android:paddingStart="12dp"
            android:textColor="@color/gray_6d"
            android:textColorHint="@color/gray_6d"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnPsw"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/lnAccount">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_psw"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:hint="@string/hint_psw"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:paddingStart="12dp"
            android:textColor="@color/gray_6d"
            android:textColorHint="@color/gray_6d"
            android:textSize="14sp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_bg_login"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/lnPsw"/>

</android.support.constraint.ConstraintLayout>